--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tamagui/config": "^1.79.1",
     "@tamagui/core": "^1.79.1",
     "axios": "^1.6.2",
+    "commitlint": "18.4.4",
     "graphql": "^16.8.1",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
