chore: library upgrade and fix missing nav screen

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src",
     "start": "react-native start",
     "test": "yarn lint && jest --coverage",
-    "precommit": "yarn lint && jest --coverage"
+    "precommit": "yarn test"
   },
   "dependencies": {
     "@apollo/client": "^3.8.7",
@@ -22,6 +22,7 @@
     "@tamagui/config": "^1.79.1",
     "@tamagui/core": "^1.79.1",
     "axios": "^1.6.2",
+    "commitlint": "18.4.4",
     "graphql": "^16.8.1",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
@@ -40,7 +41,9 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tamagui/babel-plugin": "^1.79.1",
+    "@testing-library/dom": "^9.3.3",
     "@testing-library/react-native": "^12.4.0",
+    "@testing-library/user-event": "^14.5.1",
     "@tsconfig/react-native": "^3.0.0",
     "@types/jest": "^29.5.10",
     "@types/react": "^18.0.24",
